group 'com.patrickubelhor'
version '4.12.1'

apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 1.16
targetCompatibility = 1.16
mainClassName = 'main.Bot'

repositories {
	mavenCentral()
	maven {
		name 'm2-dv8tion'
		url 'https://m2.dv8tion.net/releases'
	}
}

dependencies {
	implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.14.1'
	implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.78'
	implementation group: 'net.dv8tion',                name: 'JDA',            version: '4.3.0_331'
	implementation group: 'com.squareup.okhttp3',       name: 'okhttp',         version: '4.9.0'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.4'
	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml',  version: '2.12.4'
}

jar {
	duplicatesStrategy = DuplicatesStrategy.INCLUDE

	manifest({
		attributes(
				'Implementation-Title': 'MyloBot',
				'Main-Class': mainClassName
		)
	})

	from {
		configurations.runtimeClasspath.collect {
			(it.isDirectory() || it.name[-3..-1] == 'pom') ? it : zipTree(it)
		}
	}
}
